Using width on the slideouttoleft fixes flicker problem on Chrome, Safari, and iOS Safari.
It seems that it's less intensive for the cpu to do a width 100% to width 0% with overflow:hidden on than to do the translate.

--- a/css/structure/jquery.mobile.transition.slideout.keyframes.css
+++ b/css/structure/jquery.mobile.transition.slideout.keyframes.css
@@ -1,18 +1,18 @@
 /* keyframes for slideout to sides */
 @-webkit-keyframes slideouttoleft {
-    from { -webkit-transform: translateX(0); }
-    to { -webkit-transform: translateX(-100%); }
+    from { width: 100%; }
+    to { width: 0; }
 }
 @-moz-keyframes slideouttoleft {
-    from { -moz-transform: translateX(0); }
-    to { -moz-transform: translateX(-100%); }
+    from { -moz-transform: translate3d(0,0,0); }
+    to { -moz-transform: translate3d(-100%,0,0); }
 }
 
 @-webkit-keyframes slideouttoright {
-    from { -webkit-transform: translateX(0); }
-    to { -webkit-transform: translateX(100%); }
+    from { -webkit-transform: translate3d(0,0,0); }
+    to { -webkit-transform: translate3d(100%,0,0); }
 }
 @-moz-keyframes slideouttoright {
-    from { -moz-transform: translateX(0); }
-    to { -moz-transform: translateX(100%); }
+    from { -moz-transform: translate3d(0,0,0); }
+    to { -moz-transform: translate3d(100%,0,0); }
 }
